kubetpl/svc/nodeapp-clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nodeapp-pod
