kubetpl/svc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-goapp-ingress
spec:
  # tls:                      # https 통신을 위한 설정. 없으면 http만 연결
  # - hosts:
  #   - nginx.acorn.com
  #   - nginx.acorn.com
  # secretName: acorn-secret  # SSl 인증서 
  rules:
  - host: nginx.acorn.com
    http:
      paths:
      - pathType: Prefix
        path: "/"           # 이 경로로 올경우
        backend:
          service:
            name: nginx-lb  # 여기로 이동
            port: 
              number: 80
  - host: goapp.acorn.com
    http:
      paths:
      - pathType: Prefix
        path: "/"           # 이 경로로 올경우
        backend:
          service:
            name: goapp-lb  # 여기로 이동
            port: 
              number: 80


# host 는 DNS 에 등록되어야 하나
# 임시로 C:\Windows\System32\drivers\etc\hosts 에 추가  
# {ingress ip} nginx.acorn.com goapp.acorn.com
